# kitstarter

./: README.md  __init__.py  pindb.py  pyproject.toml  samplesdb.py  starter_kits.py
gui/: __init__.py  kitstarter_window.py  kitstarter_window.ui  main_window.py  main_window.ui  samples_widget.py
kitstarter/: __init__.py  __main__.py  install.py  jack_audio.py  pindb.py  starter_kits.py
kitstarter/gui/: __init__.py  files_explorer.py  files_explorer.ui  instrument_list.py  instrument_list.ui  instrument_widget.py  main_window.py  main_window.ui  samples_explorer.py  samples_explorer.ui  samples_widget.py
tests/: pindb.py  samples_widget.py  samplesdb.py
