[project]
name = "kitstarter"
authors = [{name = "Leon Dionne", email = "ldionne@dridesign.sh.cn"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
	"appdirs",
	"jack_audio_player >= 1.0.2",
	"midi_notes >= 1.3.0",
	"PyQt5",
	"qt_liquid_pool >= 1.2.0",
	"sfzen >= 2.3.2",
	"soso_qt_extras >= 1.7.0",
	"soundfile",
	"xdg_soso >= 1.0.2"
]

[project.urls]
Home = "https://github.com/Zen-Master-SoSo/kitstarter"

[project.scripts]
kitstarter = "kitstarter.__main__:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[bumpver]
current_version = "0.10.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[bumpver.file_patterns]
"kitstarter/__init__.py" = [
    '^__version__ = "{version}"$',
]
